--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
+                 <version>1.17.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
