--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -2,6 +2,7 @@ apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
   name: customer-profile
+  namespace: tap-dev
   labels:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: customer-profile
@@ -19,20 +20,35 @@ spec:
       - name: BP_JVM_VERSION
         value: "11"
   params:
+    - name: testing_pipeline_matching_labels
+      value:
+        apps.tanzu.vmware.com/pipeline: test
+        apps.tazu.vmware.com/test-demo: customer-profile
+    - name: gitops_server_address
+      value: https://github.com/
+    - name: gitops_repository_owner
+      value: sreeramsunkara
+    - name: gitops_branch
+      value: main
+    - name: gitops_repository_name
+      value: java-restful-app
+    - name: gitops_ssh_secret
+      value: git-ssh
+    - name: gitops_server_kind
+      value: github
     - name: annotations
       value:
         autoscaling.knative.dev/minScale: "1"
     - name: api_descriptor
       value:
         type: openapi
-        location: 
+        location:
           path: "/api-docs"
-        owner: 
-        system: 
-        description: 
+        owner: "default-team"
+        system: "java-rest-services"
+        description: "Customer Profile API"
   source:
     git:
       ref:
         branch: main
       url: https://github.com/sreeramsunkara/java-restful-app
-    
